--- a/CustomerGluDemo/CustomerGluDemo.entitlements
+++ b/CustomerGluDemo/CustomerGluDemo.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applink:modpod.page.link/</string>
+		<string>applink:modpod.page.link</string>
 	</array>
 </dict>
 </plist>
