--- a/CustomerGluDemo/CustomerGluDemo.entitlements
+++ b/CustomerGluDemo/CustomerGluDemo.entitlements
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applink:modpod.page.link</string>
+		<string>applinks:customerglu.com</string>
 	</array>
 </dict>
 </plist>
