--- a/CustomerGluDemo/CustomerGluDemo.entitlements
+++ b/CustomerGluDemo/CustomerGluDemo.entitlements
@@ -6,8 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applink:modpod.page.link</string>
-		<string>applinks:customerglu.com</string>
+		<string>applinks:modpod.page.link/shop</string>
 	</array>
 </dict>
 </plist>
