--- a/CustomerGluDemo/OLD-GoogleService-Info.plist
+++ b/CustomerGluDemo/OLD-GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>421104677220-kfbip332pvtuustsnkglbol2le9usdjt.apps.googleusercontent.com</string>
+	<string>421104677220-bqrf4tdk9llt1il5jpki311jq4md2rbl.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.421104677220-kfbip332pvtuustsnkglbol2le9usdjt</string>
+	<string>com.googleusercontent.apps.421104677220-bqrf4tdk9llt1il5jpki311jq4md2rbl</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBkCcvSuTBC4jZF5fsR0WmWr_7bcxRHBN4</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.marax.customerdemo</string>
+	<string>com.Marax.CustomerGluDemo</string>
 	<key>PROJECT_ID</key>
 	<string>modpod-e0ff6</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:421104677220:ios:4c8a5e5c5abd54e2808a71</string>
+	<string>1:421104677220:ios:8a547e764b5de25e808a71</string>
 </dict>
 </plist>
