--- a/CustomerGluDemo/Info.plist
+++ b/CustomerGluDemo/Info.plist
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>CUSTOMERGLU_WRITE_KEY</key>
 	<string>G4VCVVAcLub8hx5SaeqH3pRqLBmDFrwy</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
