--- a/CG-iOS-SDK/.swiftpm/xcode/xcshareddata/xcschemes/CustomerGluTests.xcscheme
+++ b/CG-iOS-SDK/.swiftpm/xcode/xcshareddata/xcschemes/CustomerGluTests.xcscheme
@@ -10,7 +10,15 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "NO"
+      codeCoverageEnabled = "YES">
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "ENV"
+            value = "TEST"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <Testables>
          <TestableReference
             skipped = "NO">
