--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,6 +5,7 @@ disabled_rules: # rule identifiers to exclude from running
     - syntactic_sugar
     - identifier_name
     - line_length
+    - force_cast
 
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
