--- a/CustomerGluDemo/Info.plist
+++ b/CustomerGluDemo/Info.plist
@@ -50,7 +50,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>CUSTOMERGLU_WRITE_KEY</key>
-	<string>G4VCVVAcLub8hx5SaeqH3pRqLBmDFrwy</string>
+	<string>$(CUSTOMERGLU_WRITE_KEY)</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
 	<key>FirebaseDynamicLinksCustomDomains</key>
